# pr-2-graph

./: .env  .gitignore  LICENSE  README.md  package.json  pr_description.md  pyproject.toml  run_server.sh  start.sh  test_tin_integration.sh
app/: main.py
app/config/: prompts.py  settings.py
app/core/: plugin_registry.py
app/data/: huggingface_pr.py
app/models/: graph.py
app/plugins/: base.py  repo_to_graph.py
app/services/: github_service.py  graph_service.py  llm_service.py  model_manager.py
app/services/tin_integration/: __init__.py  graph_store.py  pr_graph_adapter.py  triple_store.py
backend/: .env  pyproject.toml
backend/app/: main.py
backend/app/config/: prompts.py  settings.py
backend/app/core/: plugin_registry.py
backend/app/data/: test_conversations.py  tin_docs_pr.py
backend/app/plugins/: repo_to_graph.py
backend/app/services/: enhanced_graph_service.py  github_service.py  graph_service.py  llm_service.py  model_manager.py
backend/app/services/tin_integration/: __init__.py  api_client.py
docs/: KNOWLEDGE_GRAPH_ENHANCEMENT_PLAN.md
frontend/: index.html  package.json
frontend/css/: enhanced-graph.css  styles.css
frontend/js/: graph-visualization.js  graph.js
frontend/js/components/: DrilldownPanel.js  EdgeRenderer.js  GraphControls.js  GraphManager.js  GraphVisualization.js  NodeRenderer.js  TooltipManager.js
ollama-models/: setup_pr_models.sh
ollama-models/pr-analyzer/: Modelfile
ollama-models/pr-critic/: Modelfile
ollama-models/pr-formatter/: Modelfile
static/: graph-visualization.js
